# opentelemetry-instrumentation-confluent-kafka

./: README.md  setup.cfg
src/opentelemetry/instrumentation/confluent_kafka/: __init__.py
