[metadata]
name = opentelemetry-instrumentation-confluent-kafka
version = 0.1
description = OpenTelemetry confluent_kafka instrumentation
long_description = file: README.md
long_description_content_type = text/markdown
author = Hiroaki KAWAI
author_email = hiroaki.kawai@gmail.com
url = https://github.com/hkwi/opentelemetry-instrumentation-confluent-kafka
platforms = any
license = Apache-2.0
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8

[options]
python_requires = >=3.4
package_dir=
    =src
packages=find_namespace:
install_requires =
    opentelemetry-api
    opentelemetry-instrumentation
    wrapt
    confluent-kafka

[options.extras_require]
test =
    opentelemetry-test == 0.13dev0

[options.packages.find]
where = src

[options.entry_points]
opentelemetry_instrumentor =
    confluent_kafka = opentelemetry.instrumentation.confluent_kafka:Instrumentor
